Un poco de limpieza

--- a/HENON.ipynb
+++ b/HENON.ipynb
@@ -273,36 +273,6 @@
    "source": [
     "#definicion de variables globales.\n",
     "Xinicial,_ = Henon(5000)    \n",
-    "# for t_ventana in (25,50):    \n",
-    "#     kf = KFold(n_splits=10,shuffle=True)\n",
-    "#     resultados_train = []\n",
-    "#     resultados_test = []\n",
-    "#     model = []\n",
-    "#     res_train = np.empty((30,0))\n",
-    "#     res_test = np.empty((30,0))\n",
-    "#     train_indices = []\n",
-    "#     test_indices = []\n",
-    "#     etiquetas = []\n",
-    "#     scaler = StandardScaler()\n",
-    "    \n",
-    "#     X,y = Ventanas(Xinicial, t_ventana)\n",
-    "#     X = scaler.fit_transform(X)\n",
-    "#     y = (y - np.mean(y))/np.std(y)\n",
-    "\n",
-    "#     %time SVR_multiple()\n",
-    "#     %time MLP_multiple()\n",
-    "    \n",
-    "#     #Persistencia\n",
-    "#     with open('p4_henon-res_test_{}.bin'.format(t_ventana),'wb') as file:\n",
-    "#         pickle.dump(res_test, file)\n",
-    "#     with open('p4_henon-train_indices_{}.bin'.format(t_ventana),'wb') as file:\n",
-    "#         pickle.dump(train_indices, file)\n",
-    "#     with open('p4_henon-test_indices_{}.bin'.format(t_ventana),'wb') as file:\n",
-    "#         pickle.dump(test_indices, file)\n",
-    "#     with open('p4_henon-models_{}.bin'.format(t_ventana),'wb') as file:\n",
-    "#         pickle.dump(model, file)\n",
-    "#     with open('p4_henon-etiquetas_{}.bin'.format(t_ventana),'wb') as file:\n",
-    "#         pickle.dump(etiquetas, file)\n",
     "t_ventana = 50   \n",
     "kf = KFold(n_splits=10,shuffle=True)\n",
     "resultados_train = []\n",
@@ -366,7 +336,7 @@
    "metadata": {},
    "source": [
     "**Test de normalidad**  \n",
-    "Rechazamos normalidad, realizamos el test no paramétrico de Kruskal-Wallis en lugar de un Anova "
+    "No podemos rechazamos normalidad en el 82% de los modelos, por lo que realizamos un ANOVA (y Kruskal-Wallis para asegurarnos) "
    ]
   },
   {
@@ -399,7 +369,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Test ANOVA**"
+    "**Test Anova**  \n",
+    "Rechazamos que las precisiones sean similares"
    ]
   },
   {
@@ -444,81 +415,6 @@
    ],
    "source": [
     "print(stats.kruskal(*zip(*list(res_test))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# labels = [etiquetas[i] for i in range(res_test.shape[1]) for _ in range(res_test.shape[0])]\n",
-    "# arr_test = res_test.flatten('F')\n",
-    "# resultados = pairwise_tukeyhsd(arr_test,labels)\n",
-    "# # resultados.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#seleccionamos el que tiene mejor media y vemos en el anterior cuales son iguales\n",
-    "# best_group = np.argmin(np.mean(res_test, axis = 0))\n",
-    "# best_group = etiquetas[int(best_group)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(resultados.plot_simultaneous(comparison_name=best_group))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resultados = resultados._results_table.data\n",
-    "# group1 = resultados[0].index('group1')\n",
-    "# group2 = resultados[0].index('group2')\n",
-    "# reject = resultados[0].index('reject')\n",
-    "# best_groups = []\n",
-    "# for row in resultados[1:]:\n",
-    "#     if (row[group1] == str(best_group) or row[group2] == str(best_group)) and not row[reject]:\n",
-    "#         best_groups.append(row[group1])\n",
-    "#         best_groups.append(row[group2])\n",
-    "# best_groups.append(best_group)\n",
-    "# best_groups = set(best_groups)\n",
-    "# sorted(best_groups)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Nos quedamos con el más sencillo**  \n",
-    "El cual asumimos que es el MLPR con:\n",
-    "- sgd (Stochastic Gradient Descent)  \n",
-    "- relu (Rectified linear unit function)  \n",
-    "- 10 neuronas en la capa oculta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for ind, tag in enumerate(etiquetas):\n",
-    "#     mean_test = np.mean(res_test[:,ind])\n",
-    "#     std_test = np.std(res_test[:,ind])\n",
-    "#     print('{}: {:.4f} +- {:.4f}'.format(tag, mean_test, std_test))"
    ]
   },
   {
@@ -733,6 +629,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nos quedamos con el más sencillo**  \n",
+    "El cual asumimos que es el MLPR con:\n",
+    "- adam (Stochastic gradient-based optimizer)  \n",
+    "- tanh (Hyperbolic tan function)  \n",
+    "- 10 neuronas en la capa oculta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
@@ -873,66 +780,6 @@
    ],
    "source": [
     "print(stats.kruskal(*zip(*list(res_test))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# labels = [etiquetas[i] for i in range(res_test.shape[1]) for _ in range(res_test.shape[0])]\n",
-    "# arr_test = res_test.flatten('F')\n",
-    "# resultados = pairwise_tukeyhsd(arr_test,labels)\n",
-    "# # resultados.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#seleccionamos el que tiene mejor media y vemos en el anterior cuales son iguales\n",
-    "# best_group = np.argmin(np.mean(res_test, axis = 0))\n",
-    "# best_group = etiquetas[int(best_group)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(resultados.plot_simultaneous(comparison_name=best_group))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resultados = resultados._results_table.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# group1 = resultados[0].index('group1')\n",
-    "# group2 = resultados[0].index('group2')\n",
-    "# reject = resultados[0].index('reject')\n",
-    "# best_groups = []\n",
-    "# for row in resultados[1:]:\n",
-    "#     if (row[group1] == str(best_group) or row[group2] == str(best_group)) and not row[reject]:\n",
-    "#         best_groups.append(row[group1])\n",
-    "#         best_groups.append(row[group2])\n",
-    "# best_groups.append(best_group)\n",
-    "# best_groups = set(best_groups)\n",
-    "# sorted(best_groups)"
    ]
   },
   {
@@ -1101,6 +948,17 @@
    ],
    "source": [
     "result, best_group = tukey_best(res_test, best_list, etiquetas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nos quedamos con el más sencillo**  \n",
+    "El cual asumimos que es el MLPR con:\n",
+    "- adam (Stochastic gradient-based optimizer)  \n",
+    "- relu (Rectified linear unit function)  \n",
+    "- 10 neuronas en la capa oculta"
    ]
   },
   {
