--- a/p3_musk.ipynb
+++ b/p3_musk.ipynb
@@ -589,7 +589,7 @@
    "metadata": {},
    "source": [
     "**Test de normalidad**  \n",
-    "Rechazamos normalidad, por lo que realizamos el test no paramétrico de Kruskal-Wallis en lugar de un Anova "
+    "No podemos rechazamos normalidad en el 85% de los modelos, por lo que realizamos un ANOVA (y Kruskal-Wallis para asegurarnos) "
    ]
   },
   {
@@ -622,7 +622,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Test Anova**"
+    "**Test Anova**  \n",
+    "Rechazamos que las precisiones sean similares"
    ]
   },
   {
@@ -843,7 +844,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**----------------------------------------------------------------------------------------------------------------------------**"
+    "**Escogemos el modelo SVM rbf con gamma = 0.05 como el más sencillo de los mejores**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------------------------------------------------------------------------------------------------------------------"
    ]
   },
   {
