--- a/p5.ipynb
+++ b/p5.ipynb
@@ -199,7 +199,7 @@
     "test_indices = []\n",
     "etiquetas = []\n",
     "th = 0.85\n",
-    "# exec_MLPC()"
+    "exec_MLPC()"
    ]
   },
   {
@@ -239,6 +239,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Test de normalidad**  \n",
+    "No podemos rechazamos normalidad en el 83% de los modelos, por lo que realizamos un ANOVA (y Kruskal-Wallis para asegurarnos) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -261,6 +269,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Test Anova**  \n",
+    "Rechazamos que las precisiones sean similares"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -275,6 +291,14 @@
    ],
    "source": [
     "print(stats.f_oneway(*zip(*list(res_test))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Test de Kruskal-Wallis**  \n",
+    "Rechazamos que las precisiones sean similares"
    ]
   },
   {
@@ -463,6 +487,13 @@
     "        np.mean(PPV_l), np.std(PPV_l),\n",
     "        np.mean(NPV_l), np.std(NPV_l),\n",
     "        np.mean(ACC_l), np.std(ACC_l)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Escogemos el modelo MLPR adam con 30 neuronas ocultas y relu como el más sencillo de los mejores**"
    ]
   },
   {
@@ -667,6 +698,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Test de normalidad**  \n",
+    "No podemos rechazamos normalidad en el 85% de los modelos, por lo que realizamos un ANOVA (y Kruskal-Wallis para asegurarnos) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -692,7 +731,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Test ANOVA**"
+    "**Test Anova**  \n",
+    "Rechazamos que las precisiones sean similares"
    ]
   },
   {
@@ -710,6 +750,14 @@
    ],
    "source": [
     "print(stats.f_oneway(*zip(*list(res_test))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Test de Kruskal-Wallis**  \n",
+    "Rechazamos que las precisiones sean similares"
    ]
   },
   {
@@ -900,6 +948,13 @@
     "        np.mean(PPV_l), np.std(PPV_l),\n",
     "        np.mean(NPV_l), np.std(NPV_l),\n",
     "        np.mean(ACC_l), np.std(ACC_l)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Escogemos el modelo MLPR adam con 30 neuronas ocultas y relu como el más sencillo de los mejores**"
    ]
   },
   {
